# owl

./: .gitattributes  .gitignore  .gitmodules  .ocamlformat  .travis.yml  ACKNOWLEDGEMENT.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  INSTALL_WINDOWS.md  LICENSE  LICENSE.md  Makefile  README-zh.md  README.OLD.md  README.md  README.new.md  TODO.md  _oasis  _tags  dune-project  flake.nix  index.html  jbuild-workspace  owl-aeos.opam  owl-base.opam  owl-converter.opam  owl-plplot.opam  owl-tensorflow.opam  owl-top.opam  owl-zoo.descr  owl-zoo.opam  owl.descr  owl.install  owl.opam  owl_base.opam  owl_top.opam  owl_zoo.opam  (+1 more)
examples/: Makefile  README.md  algodiff_sgd.ml  backprop.ml  checkpoint.ml  cifar10_vgg.ml  computation_graph.ml  computation_graph_01.ml  computation_graph_02.ml  computation_graph_03.ml  computation_graph_04.ml  countmin_distributed.ml  countmin_texts.ml  ctypes_exp.ml  custom_algodiff_op.ml  dataframe.ml  dune  feedforward.ml  gradient_descent.ml  inception.ml  inception_v3.ml  kmeans.ml  lazy_cifar10.ml  lazy_cifar10_naive.ml  lazy_eval.ml  lazy_exp.ml  lazy_exp2.ml  lazy_exp3.ml  lazy_lstm.ml  lazy_mnist.ml  linear_algebra.ml  lstm.ml  max_freq.ml  mnist_cnn.ml  mnist_lenet.ml  newton_method.ml  opencl.ml  opencl_01.ml  opencl_02.ml  opencl_03.ml  (+44 more)
examples/data/: estate.csv  funding.csv  sales.csv
src/aeos/: Readme.md  dune  dune.disable  jbuild.disable  owl_aeos.ml  owl_aeos_c_interface.ml  owl_aeos_engine.ml  owl_aeos_gen.ml  owl_aeos_log.ml  owl_aeos_macros.h  owl_aeos_tuner_cos.ml  owl_aeos_tuner_cos_stub.c  owl_aeos_tuner_fold.ml  owl_aeos_tuner_fold_impl.h  owl_aeos_tuner_fold_stub.c  owl_aeos_tuner_map.ml  owl_aeos_tuner_map_impl.h  owl_aeos_tuner_map_sig.ml  owl_aeos_tuner_map_stub.c  owl_aeos_tuner_sin.ml  owl_aeos_tuner_sin_sig.ml  owl_aeos_tuner_sin_stub.c  owl_aeos_tuners.ml  owl_aeos_types.ml  owl_aeos_utils.ml  owl_aeos_writer.ml  owl_dune.omp
src/aeos/config/: configure.ml  dune
src/base/: dune  jbuild  owl_base.ml  owl_base_dataset.ml  owl_const.ml
src/base/algodiff/: owl_algodiff_check.ml  owl_algodiff_check.mli  owl_algodiff_core.ml  owl_algodiff_core.mli  owl_algodiff_core_sig.ml  owl_algodiff_generic.ml  owl_algodiff_generic.mli  owl_algodiff_generic_sig.ml  owl_algodiff_graph_convert.ml  owl_algodiff_graph_convert.mli  owl_algodiff_graph_convert_sig.ml  owl_algodiff_ops.ml  owl_algodiff_ops.mli  owl_algodiff_ops_builder.ml  owl_algodiff_ops_builder.mli  owl_algodiff_ops_builder_sig.ml  owl_algodiff_ops_sig.ml  owl_algodiff_reverse.ml  owl_algodiff_reverse.mli  owl_algodiff_types.ml  owl_algodiff_types.mli  owl_algodiff_types_sig.ml  owl_base_algodiff_primal_ops.ml
src/base/compute/: .owl_computation_operator.ml.swp  .owl_computation_operator_sig.ml.swp  owl_computation.ml  owl_computation_cpu_device.ml  owl_computation_cpu_engine.ml  owl_computation_cpu_eval.ml  owl_computation_cpu_init.ml  owl_computation_engine.ml  owl_computation_engine_sig.ml  owl_computation_graph.ml  owl_computation_graph_sig.ml  owl_computation_operator.ml  owl_computation_operator_sig.ml  owl_computation_optimiser.ml  owl_computation_optimiser_sig.ml  owl_computation_shape.ml  owl_computation_shape_sig.ml  owl_computation_symbol.ml  owl_computation_symbol_sig.ml  owl_computation_type.ml  owl_computation_type_sig.ml
src/base/core/: owl_base_slicing.ml  owl_computation.ml  owl_computation_cpu_device.ml  owl_computation_cpu_engine.ml  owl_computation_cpu_engine2.ml  owl_computation_cpu_eval.ml  owl_computation_cpu_init.ml  owl_computation_device.ml  owl_computation_engine.ml  owl_computation_engine_init.ml  owl_computation_eval.ml  owl_computation_graph.ml  owl_computation_graph.mli  owl_computation_graph2.ml  owl_computation_graph_sig.ml  owl_computation_init.ml  owl_computation_operator.ml  owl_computation_operator2.ml  owl_computation_operator_sig.ml  owl_computation_optimiser.ml  owl_computation_optimiser2.ml  owl_computation_optimiser_sig.ml  owl_computation_shape.ml  owl_computation_shape2.ml  owl_computation_shape_sig.ml  owl_computation_symbol.ml  owl_computation_symbol.mli  owl_computation_symbol2.ml  owl_computation_symbol_sig.ml  owl_computation_type.ml  owl_computation_type2.ml  owl_computation_type_sig.ml  owl_const.ml  owl_const.mli  owl_exception.ml  owl_exception.mli  owl_graph.ml  owl_graph.mli  owl_lazy.ml  owl_lazy.mli  (+4 more)
src/base/dense/: owl_base_dense_common.ml  owl_base_dense_matrix_c.ml  owl_base_dense_matrix_d.ml  owl_base_dense_matrix_generic.ml  owl_base_dense_matrix_generic.mli  owl_base_dense_matrix_intf.ml  owl_base_dense_matrix_s.ml  owl_base_dense_matrix_z.ml  owl_base_dense_ndarray.ml  owl_base_dense_ndarray_c.ml  owl_base_dense_ndarray_c.mli  owl_base_dense_ndarray_d.ml  owl_base_dense_ndarray_d.mli  owl_base_dense_ndarray_generic.ml  owl_base_dense_ndarray_generic.mli  owl_base_dense_ndarray_intf.ml  owl_base_dense_ndarray_s.ml  owl_base_dense_ndarray_s.mli  owl_base_dense_ndarray_z.ml  owl_base_dense_ndarray_z.mli
src/base/linalg/: owl_base_linalg_c.ml  owl_base_linalg_c.mli  owl_base_linalg_d.ml  owl_base_linalg_d.mli  owl_base_linalg_generic.ml  owl_base_linalg_generic.mli  owl_base_linalg_intf.ml  owl_base_linalg_s.ml  (+3 more)
src/owl/: dune  dune.omp  jbuild  owl.ml  owl_algodiff_generic.ml  owl_algodiff_generic.mli  owl_algodiff_numerical.ml  owl_algodiff_numerical.mli  owl_cblas.ml  owl_cblas_generated.ml  owl_cblas_generated_stub.c  owl_cluster.ml  owl_common.ml  owl_common_c.c  owl_common_ziggurat.c  owl_const.ml  owl_dataset.ml  owl_dense_common.ml  owl_dense_common_c.c  owl_dense_common_cmp.c  owl_dense_common_dist.c  owl_dense_common_fold.c  owl_dense_common_map.c  owl_dense_common_vec_fold.c  owl_dense_common_vec_map.c  owl_dense_matrix_c.ml  owl_dense_matrix_c.mli  owl_dense_matrix_d.ml  owl_dense_matrix_d.mli  owl_dense_matrix_generic.ml  owl_dense_matrix_generic.mli  owl_dense_matrix_generica.ml  owl_dense_matrix_s.ml  owl_dense_matrix_s.mli  owl_dense_matrix_z.ml  owl_dense_matrix_z.mli  owl_dense_ndarray_a.ml  owl_dense_ndarray_a.mli  owl_dense_ndarray_c.ml  owl_dense_ndarray_c.mli  (+95 more)
(+5991 files in other folders)
