opam-version: "2.0"
maintainer: "Liang Wang <ryanrhymes@gmail.com>"
authors: [ "Liang Wang" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl"
dev-repo: "git+https://github.com/owlbarn/owl.git"
bug-reports: "https://github.com/owlbarn/owl/issues"
doc: "https://owlbarn.github.io/owl/"
synopsis: "OCaml Scientific and Engineering Computing"
description: """
Owl: OCaml Scientific and Engineering Computing

Owl is an OCaml numerical library.
It supports N-dimensional arrays, both dense and sparse matrix operations, linear algebra, regressions, fast Fourier transforms, and many advanced mathematical and statistical functions (such as Markov chain Monte Carlo methods).
Recently, Owl has implemented algorithmic differentiation which essentially makes developing machine learning and neural network algorithms trivial.
"""

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "owl" {>= "0.5.0"}
  "plplot"
]
