opam-version: "2.0"
maintainer: "Liang Wang <ryanrhymes@gmail.com>"
authors: [ "Liang Wang" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl"
dev-repo: "git+https://github.com/owlbarn/owl.git"
bug-reports: "https://github.com/owlbarn/owl/issues"
doc: "https://owlbarn.github.io/"
synopsis: "OCaml Scientific and Engineering Computing - Top"
description: "Owl is an OCaml scientific library."

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.0.0"}
  "ocaml-compiler-libs"
  "owl" {= version}
  "owl-zoo" {= version}
]
