opam-version: "2"
maintainer: "Liang Wang <ryanrhymes@gmail.com>"
authors: [ "Liang Wang" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl"
dev-repo: "git+https://github.com/owlbarn/owl.git"
bug-reports: "https://github.com/owlbarn/owl/issues"
doc: "https://owlbarn.github.io/"
synopsis: "OCaml Scientific and Engineering Computing - Zoo"
description: """
Owl's Zoo System

The Zoo System is Owl's customised toplevel.
It is used for scripting numerical applications and sharing small code snippets via gist among users.
The Zoo system introduces a zoo directive into toplevel, the referred gist id will be automatically downloaded and imported as a module in the script.
The nested zoo reference is also supported.
"""

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build}
  "ocaml-compiler-libs"
  "owl"
]
