opam-version: "1.2"
maintainer: "Liang Wang <ryanrhymes@gmail.com>"
authors: [ "Liang Wang" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl"
dev-repo: "git+https://github.com/owlbarn/owl.git"
bug-reports: "https://github.com/owlbarn/owl/issues"
doc: "https://owlbarn.github.io/owl/"
synopsis: "OCaml Scientific and Engineering Computing"
description: "Owl is an OCaml scientific library."
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

build-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]

depends: [
  "alcotest" {test}
  "base" {build}
  "base-bigarray"
  "conf-openblas" {>= "0.2.0"}
  "ctypes"
  "dune" {build}
  "eigen" {>= "0.1.0"}
  "owl-base"
  "owl-aeos"
  "plplot"
  "stdio" {build}
  "sexplib" {build}
]

available: [ ocaml-version >= "4.06.0" ]
