opam-version: "1.2"
maintainer: "Liang Wang (ryanrhymes@gmail.com)"
authors: [ "Liang Wang (ryanrhymes@gmail.com)" ]
license: "MIT"
homepage: "https://github.com/ryanrhymes/owl"
dev-repo: "git+https://github.com/ryanrhymes/owl.git"
bug-reports: "https://github.com/ryanrhymes/owl/issues"
doc: "http://www.cl.cam.ac.uk/~lw525/owl/"

name: "owl_top"
version: "dev"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "owl"
  "owl_zoo"
  "ocaml-compiler-libs"
]
