opam-version: "2.0"
maintainer: "Liang Wang (ryanrhymes@gmail.com)"
authors: [ "Liang Wang (ryanrhymes@gmail.com)" ]
license: "MIT"
homepage: "https://github.com/ryanrhymes/owl"
dev-repo: "git+https://github.com/ryanrhymes/owl.git"
bug-reports: "https://github.com/ryanrhymes/owl/issues"
doc: "http://www.cl.cam.ac.uk/~lw525/owl/"

name: "owl_zoo"
version: "dev"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "owl"
  "ocaml-compiler-libs"
]
