(library
  (name owl_aeos)
  (public_name owl-aeos)
  (wrapped false)
  (flags (:standard -safe-string))
  (modules (:standard \ owl_aeos_gen))
  (c_names
    owl_aeos_tuner_map_stub
    owl_aeos_tuner_fold_stub
  )
  (libraries str unix bigarray)
  (c_flags (:include aeos_c_flags.sexp))
  (c_library_flags (:include aeos_c_library_flags.sexp))
)

(rule
 (targets aeos_c_flags.sexp
          aeos_c_library_flags.sexp
          )
  (deps   (:deps config/configure.exe))
  (action (run %{deps}))
)

(executable
 (name owl_aeos_gen)
 (modules owl_aeos_gen)
 (libraries owl-aeos))
